
	* files.el (directory-files-recursively): Don't use the word
	"path" for a file name.

2015-01-15  Wolfgang Jenkner  <wjenkner@inode.at>

	* calc/calc-units.el (math-units-in-expr-p)
	(math-single-units-in-expr-p, math-find-compatible-unit-rec)
	(math-extract-units): Handle the `neg' operator.  (Bug#19582)

2015-01-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/cl-generic.el (cl--generic-build-combined-method):
	Return the value of the primary rather than the after method.

	* emacs-lisp/eieio-core.el: Provide support for cl-generic.
	(eieio--generic-tagcode): New function.
	(cl-generic-tagcode-function): Use it.
	(eieio--generic-tag-types): New function.
	(cl-generic-tag-types-function): Use it.
	(eieio-object-p): Tighten up the test.

	* emacs-lisp/cl-generic.el (cl-generic-define-method): Fix paren typo.

2015-01-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/cl-generic.el: New file.

	* emacs-lisp/cl-macs.el (cl-flet): Allow (FUN EXP) forms.
	(cl-load-time-value, cl-labels): Use closures rather than
	backquoted lambdas.
	(cl-macrolet): Use `eval' to create the function value, and support CL
	style arguments in for the defined macros.

2015-01-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* net/eww.el: Use lexical-binding.
	(eww-links-at-point): Remove unused arg.
	(eww-mode-map): Inherit from special-mode-map.
	(eww-mode): Derive from special-mode.  Don't use `setq' on a hook.

2015-01-13  Alan Mackenzie  <acm@muc.de>

	Allow compilation during loading of CC Mode-derived modes (bug#19206).
	* progmodes/cc-bytecomp.el (cc-bytecomp-compiling-or-loading):
	New function which walks the stack to discover whether we're compiling
	or loading.
	(cc-bytecomp-is-compiling): Reformulate, and move towards beginning.
	(cc-bytecomp-is-loading): New defsubst.
	(cc-bytecomp-setup-environment, cc-bytecomp-restore-environment):
	Use the above defsubsts.
	(cc-require-when-compile, cc-bytecomp-defvar)
	(cc-bytecomp-defun): Simplify conditionals.